--- a/jekyll-site-src/_layouts/homepage.html
+++ b/jekyll-site-src/_layouts/homepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="mdc-typography">
   {% include head.html %}
-  <body class="page page--homepage">
+  <body class="page page--homepage page--platform-{{ page.site_platform }}">
     {% include toolbar.html
         title="Material Components"
         title_link="../"
