--- a/jekyll-site-src/_includes/footer.html
+++ b/jekyll-site-src/_includes/footer.html
@@ -10,11 +10,11 @@
         <a class="footer__link" href="https://www.google.com/intl/en/policies/terms/" target="_blank">Privacy &amp; Terms</a>
       </li>
       <li class="footer__link-container footer__link-container--right">
-        <a class="footer__made-with-desktop-link footer__link" href="https://material.io/components/web">
-          Made with Material Components for the Web
+        <a class="footer__link" href="https://material.io/components/web">
+          <span class="footer__made-with-desktop">Made with Material Components for the web</span>
         </a>
-        <a class="footer__made-with-mobile-link footer__link" href="https://material.io/components/web">
-          Made with MDC Web
+        <a class="footer__link" href="https://material.io/components/web">
+          <span class="footer__made-with-mobile">Made with MDC Web</span>
         </a>
       </li>
     </ul>
