--- a/jekyll-site-src/_css_src/components/_page.scss
+++ b/jekyll-site-src/_css_src/components/_page.scss
@@ -83,4 +83,10 @@
       }
     }
   }
+
+  @include breakpoint($max: $mobile-toolbar-max-width) {
+    &__content {
+      margin-top: 32px + $mobile-toolbar-height;
+    }
+  }
 }
