Adds a function for performing viewport-width-based interpolation.

--- a/jekyll-site-src/_css_src/app.scss
+++ b/jekyll-site-src/_css_src/app.scss
@@ -1,5 +1,6 @@
 @import 'mixins';
 @import 'constants'; // Includes mdc-web overrides
+@import 'functions';
 
 @import 'reset-css/_reset';
 @import "@material/theme/mdc-theme";
