--- a/jekyll-site-src/_css_src/components/_component-list.scss
+++ b/jekyll-site-src/_css_src/components/_component-list.scss
@@ -12,7 +12,7 @@
 
 .component-list-item {
   @include breakpoint($min: 720px, $max: 1280px) {
-    width: calc(284px + 240 * (100vw - 720px) / (1280 - 720));
+    width: vw-lerp($value: 284px 524px, $viewport-width: 720px 1280px);
   }
 
   @include media-phone {
@@ -40,7 +40,7 @@
       background-size: cover;
 
       @include breakpoint($min: 720px, $max: 1280px) {
-        margin-right: calc(24px + 24 * (100vw - 720px) / (1280 - 720));
+        margin-right: vw-lerp($value: 24px 48px, $viewport-width: 720px 1280px);
       }
 
       @include media-phone {
@@ -69,7 +69,7 @@
     }
 
     @include breakpoint($min: 720px, $max: 1280px) {
-      margin-right: calc(80px + 120 * (100vw - 720px) / (1280 - 720));
+      margin-right: vw-lerp($value: 60px 120px, $viewport-width: 720px 1280px);
     }
 
     margin-right: 200px;
