--- a/jekyll-site-src/_css_src/components/_welcome.scss
+++ b/jekyll-site-src/_css_src/components/_welcome.scss
@@ -4,7 +4,7 @@
   color: $toolbar-text-color;
 
   &__content {
-    @include content-element;
+    @extend %page-element;
 
     display: flex;
     flex-direction: row;
