--- a/jekyll-site-src/_css_src/components/_component-list.scss
+++ b/jekyll-site-src/_css_src/components/_component-list.scss
@@ -29,12 +29,13 @@
 
     display: inline-flex;
 
+    // This element is the component icon.
     &::before {
       content: '';
       display: inline-block;
 
-      min-width: 80px;
-      height: 80px;
+      min-width: 96px;
+      height: 96px;
 
       background-image: url('/images/component_icons/ic_component_24px.svg');
       background-size: cover;
