--- a/jekyll-site-src/_css_src/app.scss
+++ b/jekyll-site-src/_css_src/app.scss
@@ -26,6 +26,7 @@
 @import 'components/footer';
 @import 'components/hidden-mark';
 @import 'components/icon-list';
-@import 'components/platform-link-list';
 @import 'components/toolbar';
+@import 'components/toolbar-nav';
 @import 'components/welcome';
+@import 'components/welcome-link-list';
