--- a/jekyll-site-src/_css_src/components/_footer.scss
+++ b/jekyll-site-src/_css_src/components/_footer.scss
@@ -61,8 +61,9 @@
     text-decoration: none;
   }
 
-  @include media-phone {
+  @include media-small {
     height: $mobile-footer-height;
+    margin-top: 120px;
 
     &__content {
       padding-bottom: 12px;
