--- a/jekyll-site-src/_includes/toolbar.html
+++ b/jekyll-site-src/_includes/toolbar.html
@@ -13,7 +13,7 @@
       </a>
     </section>
     <section class="mdc-toolbar__section mdc-toolbar__section--align-end">
-      {% include toolbar-nav.html github_only=include.is_root %}
+      {% include toolbar-nav.html is_root=include.is_root %}
     </section>
   </div>
 </header>
