--- a/jekyll-site-src/_layouts/homepage.html
+++ b/jekyll-site-src/_layouts/homepage.html
@@ -10,7 +10,7 @@
     <div class="page__flex-element">
       {% include welcome.html %}
       <div class="page__content">
-        <article class="page__article article article--full-width">
+        <article class="page__article article">
           {{ content }}
         </article>
       </div>
