--- a/jekyll-site-src/_layouts/landing-no-drawer.html
+++ b/jekyll-site-src/_layouts/landing-no-drawer.html
@@ -2,7 +2,9 @@
 <html class="mdc-typography">
   {% include head.html %}
   <body class="page page--landing-no-drawer page--{{ page.section }}">
-    {% include toolbar.html title=page.site_title %}
+    {% include toolbar.html
+        title=page.site_title
+        short_title=page.site_short_title %}
 
     <div class="page__content page__flex-element">
       <article class="page__article article article--full-width">
