Aligns the logo to the content's left edge.
This also allows us to treat Material and MDC logos identically.

--- a/jekyll-site-src/_css_src/_mixins.scss
+++ b/jekyll-site-src/_css_src/_mixins.scss
@@ -34,6 +34,12 @@
   }
 }
 
+@mixin media-lt-large {
+  @include breakpoint($max: $media-medium-max) {
+    @content;
+  }
+}
+
 @mixin link-styles {
   &,
   &:link,
