--- a/jekyll-site-src/_css_src/components/_hidden-mark.scss
+++ b/jekyll-site-src/_css_src/components/_hidden-mark.scss
@@ -1,13 +1,18 @@
+// This code is designed to position the hidden marks appropriately, while still
+// allowing the user to copy the text with spaces intact and without hidden
+// marks.
 .hidden-mark {
+  position: relative;
   display: inline-block;
   white-space: nowrap;
 
-  &::before,
   &::after {
+    position: absolute;
+    right: 0;
     color: #9b9b9b;
   }
 
-  &--dot::before {
+  &--dot::after {
     content: '•';
   }
 
