Adds the ability to switch between platforms from the toolbar.

--- a/jekyll-site-src/_css_src/app.scss
+++ b/jekyll-site-src/_css_src/app.scss
@@ -6,10 +6,11 @@
 @import "@material/theme/mdc-theme";
 @import '@material/typography/mdc-typography';
 @import '@material/drawer/mdc-drawer';
+@import '@material/form-field/mdc-form-field';
 @import '@material/list/mdc-list';
+@import '@material/menu/mdc-menu';
 @import '@material/radio/mdc-radio';
 @import '@material/toolbar/mdc-toolbar';
-@import '@material/form-field/mdc-form-field';
 
 // Site
 @import 'base';
