--- a/jekyll-site-src/_layouts/homepage.html
+++ b/jekyll-site-src/_layouts/homepage.html
@@ -5,7 +5,8 @@
     {% include toolbar.html
         title="Material Components"
         title_link="../"
-        no_shadow=true %}
+        no_shadow=true
+        is_root=false %}
 
     <div class="page__flex-element">
       {% include welcome.html %}
