--- a/jekyll-site-src/_layouts/landing-no-drawer.html
+++ b/jekyll-site-src/_layouts/landing-no-drawer.html
@@ -4,7 +4,8 @@
   <body class="page page--landing-no-drawer page--{{ page.section }}">
     {% include toolbar.html
         title=page.site_title
-        short_title=page.site_short_title %}
+        short_title=page.site_short_title
+        is_root=false %}
 
     <div class="page__content page__flex-element">
       <article class="page__article article article--full-width">
