Adds styling for a step list, which appears on platform homepages.

--- a/jekyll-site-src/_css_src/app.scss
+++ b/jekyll-site-src/_css_src/app.scss
@@ -27,5 +27,6 @@
 @import 'components/footer';
 @import 'components/hidden-mark';
 @import 'components/icon-list';
+@import 'components/step-list';
 @import 'components/toolbar';
 @import 'components/welcome';
