--- a/jekyll-site-src/_css_src/components/_welcome.scss
+++ b/jekyll-site-src/_css_src/components/_welcome.scss
@@ -66,7 +66,7 @@
 
       // The second dot is hidden in the largest breakpoint, because we're
       // fancy.
-      &:nth-child(2)::after {
+      #{$component}--platform &:nth-child(2)::after {
         visibility: hidden;
       }
     }
