--- a/jekyll-site-src/_css_src/components/_welcome.scss
+++ b/jekyll-site-src/_css_src/components/_welcome.scss
@@ -105,7 +105,7 @@
 
     &--root &__content {
       &::after {
-        margin: 130px 48px 0 0;
+        margin: 130px 48px -40px 0;
       }
     }
 
