Fixes a bunch of problems with the platform chooser.
* Menus are now positioned above the second toolbar section.
* Trigger button is always accessible.
* Now works in FF, by introducing a menu anchor parent.

Bonus: Menu initialization is now generic.

--- a/jekyll-site-src/_css_src/components/_toolbar.scss
+++ b/jekyll-site-src/_css_src/components/_toolbar.scss
@@ -43,6 +43,14 @@
     height: $toolbar-height;
   }
 
+  &__platform-chooser {
+    align-self: center;
+  }
+
+  &__section:first-child  {
+    z-index: 2;
+  }
+
   &--no-shadow {
     box-shadow: none;
   }
@@ -84,6 +92,12 @@
 
     &__platform-chooser {
       margin-top: 16px;
+    }
+  }
+
+  @include breakpoint($max: 344px) {
+    &__platform-chooser {
+      display: none;
     }
   }
 }
