--- a/jekyll-site-src/_includes/toolbar-platform-chooser.html
+++ b/jekyll-site-src/_includes/toolbar-platform-chooser.html
@@ -1,4 +1,9 @@
-<button class="mdc-toolbar__platform-chooser toolbar-platform-chooser__button">
+<div class="mdc-menu-anchor mdc-toolbar__platform-chooser">
+  <button class="toolbar-platform-chooser__button">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#fff">
+      <path d="M7 10l5 5 5-5z"/>
+    </svg>
+  </button>
   <div class="toolbar-platform-chooser__menu mdc-simple-menu" tabindex="-1">
     <ul class="mdc-simple-menu__items mdc-list" role="menu" aria-hidden="true">
       <li class="mdc-list-item"
@@ -21,8 +26,4 @@
       </li>
     </ul>
   </div>
-
-  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#fff">
-    <path d="M7 10l5 5 5-5z"/>
-  </svg>
-</button>
+</div>
