--- a/jekyll-site-src/_css_src/components/_step-list.scss
+++ b/jekyll-site-src/_css_src/components/_step-list.scss
@@ -5,6 +5,8 @@
 }
 
 .step-list-item {
+  margin-top: 32px;
+
   &::before {
     content: 'Step ' counter(step, decimal) '. ';
     display: inline-block;
