--- a/jekyll-site-src/_css_src/components/_benefits-list.scss
+++ b/jekyll-site-src/_css_src/components/_benefits-list.scss
@@ -74,4 +74,11 @@
       margin-right: 24px;
     }
   }
+
+  @include breakpoint($max: 499px) {
+    &::before {
+      align-self: center;
+      margin-left: 12px;
+    }
+  }
 }
