--- a/jekyll-site-src/_css_src/components/_drawer.scss
+++ b/jekyll-site-src/_css_src/components/_drawer.scss
@@ -3,7 +3,6 @@
   height: auto;
 }
 
-// Notes:
 .drawer-list {
   font-family: $ui-font-family;
   font-weight: 500;
@@ -12,13 +11,14 @@
     margin-left: 16px;
   }
 
-  &__item {
-
-  }
-
   &__link {
+    @include link-styles {
+      color: $grey-800;
+    }
+
     display: inline-block;
     padding: 8px 0;
+    position: relative;
     text-decoration: none;
 
     &:hover {
@@ -27,8 +27,18 @@
 
     &--active {
       @include link-styles {
-        color: $accent-color;
+        color: $black;
         text-decoration: none;
+      }
+
+      &::before {
+        content: '';
+        position: absolute;
+
+        bottom: 4px;
+        left: 0;
+        right: 0;
+        border-bottom: 1px solid $accent-color;
       }
     }
   }
